[package]
authors = ["ChiHai <ihciah@gmail.com>", "Rain <rain-jiang@outlook.com>"]
description = "Monoio Transporter."
edition = "2021"
license = "MIT/Apache-2.0"
name = "monoio-transports-patched"
version = "0.5.3"

[dependencies]
monoio = { version = "0.2.4", default-features = false }
monoio-compat = { version = "0.2.2", optional = true }
service-async = "0.2.4"
monoio-rustls = { version = "0.4.0", optional = true }
monoio-http = { version = "0.3.12", optional = true }
monoio-native-tls = { version = "0.4.0", optional = true, features = ["alpn"] }
bytes = "1"
http = "1.0"
local-sync = "0.1"
thiserror = "2.0.6"

serde = "1"
serde_json = "1"
smol_str = "0.2"

rustls = "~0.23.4"
webpki-roots = "~0.26.7"
native-tls = { version = "0.2", optional = true }

# Available only on hyper feature only. Used for hyper tls connections
tokio-native-tls = { version = "0.3.1", optional = true}
tokio-rustls = { version = "0.26.1", optional = true }

tracing = { version = "0.1", optional = true }

hyper = { version = "1.5.1", features = [
    "http1",
    "client",
    "http2",
], optional = true }
pin-project-lite = { version = "0.2", optional = true }
# TODO: impl async mutex in local-sync and replace here.
tokio = { version = "1.42", default-features = false, features = [
    "sync",
], optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
http-body-util = "0.1"
h2 = "0.4.7"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["monoio-default"]
# Enable this feature to make connection pool periodically checking works.
# You must enable time driver to use it.
time = []

hyper = [
    "dep:hyper",
    "dep:pin-project-lite",
    "dep:tokio",
    "monoio/poll-io",
    "monoio-compat/hyper",
]

# Note: rustls and native-tls cannot be enabled at the same time
rustls-unsafe-io = ["monoio-rustls/unsafe_io"]
native-tls = ["dep:native-tls", "monoio-native-tls"]
logging = ["tracing", "monoio-rustls/logging"]
monoio-default = [
    "monoio/default",
    "monoio-rustls",
    "monoio-http",
    "time"
]

# This feature is specifically to enable tls support for hyper connectors
monoio-legacy = [
    "monoio/legacy",
    "monoio/tokio-compat",
    "monoio/async-cancel",
    "monoio/macros",
    "monoio/bytes",
    "monoio/utils",
    "tokio-rustls",
    "hyper",
    "time",
]

# by default hyper connector will use rustls
hyper-native-tls = ["tokio-native-tls", "native-tls/alpn", "monoio-legacy"]